after homepage change

--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -13,17 +13,14 @@
           </div>
           <div class="row">
               <div class="col-md-12">
-                  <h3 style="color:#333">Some things that we offer ..</h3>
+                  <h3 style="color:#333">Business Communication. Even better than before!</h3>
                   <p class="lead text-muted ">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                      Minus labore commodi vero obcaecati unde debitis, quis, 
-                      magni, ea cumque beatae animi! Ex animi deserunt libero distinctio suscipit nulla repudiandae id?
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Business Communication has to be very precise. 
+                    MangoTree brings you the best feature set to start having a conversation with your customer. 
+                    An engaged customer boosts your business, giving you better ROI all year round.
                   </p>
                   <p class="lead text-muted">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                    Esse, pariatur consectetur laudantium voluptatibus, quam deleniti at, 
-                    architecto doloremque aspernatur dolorem neque earum rerum. Est nostrum cupiditate cumque ab atque aliquid?
+                    Log-In to start reaping the benefits of using a highly intelligent application. 
                   </p>
                   <br>
                   <div class="text-right arrow">
