pre launch changes

--- a/angular-src/src/app/components/bulkmessage/bulkmessage.component.html
+++ b/angular-src/src/app/components/bulkmessage/bulkmessage.component.html
@@ -47,7 +47,7 @@
                 <div class="col-12 col-md-9">
                     <select [(ngModel)]="masking" (change)="maskingchange($event)" name="masking" id="masking" class="form-control form-control-sm" required>
                         <option value="" disabled selected>Select Masking</option>
-                        <option *ngFor="let item of masksarr" [value]="item.mask">{{item.mask}} ({{item.type}})</option>
+                        <option *ngFor="let item of masksarr" [value]="item.mask">none</option>
                       </select>
                 </div>
                 
@@ -97,7 +97,7 @@
 
             <div style="position:relative;width:287px;" class="d-block mx-auto">
                 <div class="topbar"><img src="assets/imgs/status.png" style="width:100%" alt="status"></div>  
-                <div class="topbarmask" *ngIf="masking.length>0">{{masking}}</div>  
+                <div class="topbarmask" *ngIf="masking.length>0">{{masking=="default"?"Phone Number":masking}}</div>  
                 <span *ngIf="msg.length>0" style="position: absolute;
                 top: 135px;
                 left: 35px;
