--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -20,7 +20,7 @@
                     An engaged customer boosts your business, giving you better ROI all year round.
                   </p>
                   <p class="lead text-muted">
-                    Log-In to start reaping the benefits of using a highly intelligent application. 
+                    Log-In to this highly intelligent application and start reaping the benefits
                   </p>
                   <br>
                   <div class="text-right arrow">
